feat: inputNumber의 예외처리